--- a/.gitmodules
+++ b/.gitmodules
@@ -48,6 +48,9 @@
 	url = git://github.com/gjb2048/moodle-format_topcoll.git
 	branch = master
 	tag = V3.11.0.5
+[submodule "cle-patches"]
+	path = cle-patches
+	url = https://github.com/ucsf-ckm/moodle-cle-patches
 [submodule "enrol/ilios"]
 	path = enrol/ilios
 	url = git://github.com/ilios/moodle-enrol-ilios.git
