Added lib/editor/atto/plugins/morefontcolors as submodule.

--- a/.gitmodules
+++ b/.gitmodules
@@ -88,6 +88,10 @@
 	path = lib/editor/atto/plugins/hr
 	url = https://github.com/damyon/moodle-atto_hr
 	branch = master
+[submodule "lib/editor/atto/plugins/morefontcolors"]
+	path = lib/editor/atto/plugins/morefontcolors
+	url = https://github.com/ndunand/moodle-atto_morefontcolors
+	branch = master
 [submodule "lib/editor/tinymce/plugins/h5p"]
 	path = lib/editor/tinymce/plugins/h5p
 	url = https://github.com/catalyst/tinymce_h5p
