--- a/.gitmodules
+++ b/.gitmodules
@@ -33,8 +33,9 @@
 	branch = master
 [submodule "blocks/massaction"]
 	path = blocks/massaction
-	url = https://github.com/ucsf-ckm/moodle-block_massaction
-	branch = UCSFCLE_39_DEVEL
+	url = https://github.com/Syxton/moodle-block_massaction
+	branch = 39_311_stable
+	tag = 6.0.1
 [submodule "blocks/moodleversion"]
 	path = blocks/moodleversion
 	url = https://github.com/iautomatebr/moodle-block_moodleversion
